// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with multiple items 1`] = `
<div>
  <h1
    className="headline"
  >
    React UI
  </h1>
  <ul
    className="root"
  >
    <li
      key="#anchor1"
    >
      <a
        className="navigationLink"
        href="#anchor1"
      >
        Multiple items 1
      </a>
    </li>
    <li
      key="#anchor2"
    >
      <a
        className="navigationLink"
        href="#anchor2"
      >
        Multiple items 2
      </a>
    </li>
    <li
      key="#anchor3"
    >
      <a
        className="navigationLink"
        href="#anchor3"
      >
        Multiple items 3
      </a>
    </li>
  </ul>
</div>
`;

exports[`rendering renders correctly with nested items 1`] = `
<div>
  <h1
    className="headline"
  >
    React UI
  </h1>
  <ul
    className="root"
  >
    <li
      key="#anchor1"
    >
      <a
        className="navigationLink"
        href="#anchor1"
      >
        Nested items 1
      </a>
      <ul
        className="subnavigation"
      >
        <li
          key="#anchor1a"
        >
          <a
            className="subnavigationLink"
            href="#anchor1a"
          >
            Nested items 1 a
          </a>
        </li>
        <li
          key="#anchor1b"
        >
          <a
            className="subnavigationLink"
            href="#anchor1b"
          >
            Nested items 1 b
          </a>
        </li>
      </ul>
    </li>
    <li
      key="#anchor2"
    >
      <a
        className="navigationLink"
        href="#anchor2"
      >
        Nested items 2
      </a>
    </li>
    <li
      key="#anchor3"
    >
      <a
        className="navigationLink"
        href="#anchor3"
      >
        Nested items 3
      </a>
    </li>
  </ul>
</div>
`;

exports[`rendering renders correctly with single item 1`] = `
<div>
  <h1
    className="headline"
  >
    React UI
  </h1>
  <ul
    className="root"
  >
    <li
      key="#anchor"
    >
      <a
        className="navigationLink"
        href="#anchor"
      >
        Single item
      </a>
    </li>
  </ul>
</div>
`;
